myelin-macros/tests/ui/fail_borrowed_arg.rs
#[myelin::service]
pub trait FooService {
    fn bar(&self, name: &str);
}

fn main() {}
